  - Fixed the Brazilian focus "Integrate UNASUL" not properly adding the UNASUL faction to the country that completes the focus
  - Fixed the Destroyers for non-MTG owners being unable to deploy
  - Fixed the Iraqi focus "Russian Investments" display not giving the proper influence

 Database:
  - Added the starting spirit of "Nuclear Energy" to Iran
  - Blocked the "Electronic Government" special project from being visible for other nations other than Iran

 Localization:
  - Some minor localization fixes for Russian content

 Graphics:
  - Fixed some inconsistencies in the VLS naval tech icons for the Naval Designer

v1.12.0b

 AI:
  - The AI for joining NATO is now a little less aggressive and more likely to be reactionary to the world's condition then just joining cuz raisins
  - Adjusted the Armenian AI from not taking the economic decisions/focuses

 Bugfix:
  - Fixed the Chechen focus tree about white peacing/becoming a subject of Russia
  - Fixed the Bosnian dynamic modifiers adding/removing improperly
  - Fixed the Iranian decision "Safety and Security" not properly checking for stability in the right amount

 Database:
  - Fixed the Turkish Famous Leaders showing up in the United States instead of for Turkey

v1.12.0a

 Bugfix:
  - Fixed the production bug for SPR and USA
  - Fixed the Economic Aid event not refunding your money if they reject the deal
  - Fixed several errors about a nation getting influence on itself

 Content:
  - Added the WW3 Game Rule to the game

 Localization:
  - Fixed broken formatting key in the cartel decisions
  - Fixed the lowercase c in Carrier for the unit types
  - Fixed broken localization formatting for the USA Congress decisions

 Music:
  - Added 24 new songs to the game under the "Synthwave Playlist"

v1.12.0

 AI:
  - Rewrite the influence AI to closer to the investment AI where it evaluates by country context
  - Fixed the AI not wanting to take European Parliament measures due to them having a lone factor of 0