@@ -9,6 +9,10 @@ NATO_decisions = {
 		days_re_enable = 270
 
 		visible = {
+			NOT = {
+				has_country_flag = F35_blacklist
+			}
+			has_idea = Major_Non_NATO_Ally
 			USA = {
 				OR = {
 					has_country_flag = USA_open_f35_program_nato
