@@ -5476,6 +5476,9 @@ generic_coalition_politics_decisions = {
 		days_re_enable = 45
 
 		visible = {
+			NOT = {
+				has_country_flag = F35_blacklist
+			}
 			USA = {
 				has_country_flag = USA_open_f35_program_world
 			}
