@@ -3283,7 +3283,9 @@ USA_f35_program_decisions = {
 	USA_expansion_of_the_program = {
 		icon = GFX_decision_nato_f35_expansion_button
 		days_remove = 60
-
+		visible = {
+			original_tag = USA
+		}
 		fire_only_once = yes
 
 		remove_effect = {
