@@ -189,7 +189,8 @@ set_leader_USA = {
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { conservatism_leader = 1 } }
 			if = { limit = { date < 2021.1.1 } set_temp_variable = { b = 1 } } #Incumbant Election possibility "two term period"
 		}
-		if = { limit = { check_variable = { conservatism_leader = 4 } NOT = { check_variable = { b = 1 } } }
+		if = {
+			limit = { check_variable = { conservatism_leader = 4 } NOT = { check_variable = { b = 1 } } }
 			add_to_variable = { conservatism_leader = 1 }
 			hidden_effect = { kill_country_leader = yes }
 
@@ -201,7 +202,6 @@ set_leader_USA = {
 					western_conservatism
 				}
 			}
-
 
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { conservatism_leader = 1 } }
 		}
@@ -220,7 +220,6 @@ set_leader_USA = {
 					ideological_crusader
 				}
 			}
-
 
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { conservatism_leader = 1 } }
 		}
