@@ -21146,6 +21146,18 @@ country_event = {
 			}
 		}
 	}
+
+	option = {
+		name = usa.89.o3
+		log = "[GetDateText]: [This.GetName]: usa.89.o3 executed"
+		FROM = {
+			country_event = usa.95
+			set_country_flag = F35_blacklist
+		}
+		ai_chance = {
+			base = 0 # AI won't do this
+		}
+	}
 }
 
 country_event = {
@@ -21258,6 +21270,23 @@ country_event = { # Eternal Clinton End
 				career_politician
 				rational
 			}
+		}
+	}
+}
+
+country_event = {
+	id = usa.95
+	title = usa.95.t
+	desc = usa.95.d
+	picture = GFX_f_plane_usa
+	is_triggered_only = yes
+
+	option = {
+		name = usa.95.o1
+		log = "[GetDateText]: [This.GetName]: usa.95.o1 executed"
+
+		ai_chance = {
+			base = 10
 		}
 	}
 }
