@@ -2713,6 +2713,7 @@
  usa.89.d: "[FROM.GetName] has applied to join the F-35 program. They are one of our closest partners, and granting them such technology may be beneficial in achieving our goals."
  usa.89.o1: "Welcome to the program!"
  usa.89.o2: "No"
+ usa.89.o3: "No, and do not ask again!"
 
  usa.90.t: "We Are Now Apart of the F-35 Program!"
  usa.90.d: "The United States was generous enough to allow us into the F-35 program, making us one of the few contenders of this highly sought after fighter."
@@ -2733,6 +2734,10 @@
  usa.94.t: ""
  usa.94.d: ""
  usa.94.a: ""
+
+ usa.95.t: "F-35 Program Application Denied And Blacklisted"
+ usa.95.d: "The United States was no willing to allow us to join the F-35 program, citing that we cannot yet be trusted to possess such technology. We have also been told that we are being blacklisted from ever being able to enter the program again."
+ usa.95.o1: "Fine"
 
  #USA Events - News
  usa_news.18.t: "USS Cole Bombing"
