@@ -22,6 +22,10 @@ v1.12.1
   - Fixed the Brazilian focus "Integrate UNASUL" not properly adding the UNASUL faction to the country that completes the focus
   - Fixed the Destroyers for non-MTG owners being unable to deploy
   - Fixed the Iraqi focus "Russian Investments" display not giving the proper influence
+  - Fixed a bug where Eastern European countries could apply to the F-35 program without being in NATO or a Major Non-NATO Ally
+
+ Content:
+  - Added an option to blacklist countries from re-applying to the F-35 program as the United States
 
  Database:
   - Added the starting spirit of "Nuclear Energy" to Iran
